bug 1082206 detach TrackBuffer when unlinking SourceBuffer r=kinetik

When HTMLMediaElement initiates MediaSourceDecoder Shutdown() in cycle
collection, it may no longer have access to the SourceBuffers to notify
through Detach().

The DiscardDecoder() call in TrackBuffer::Shutdown() is too late as this runs
after MediaDecoderStateMachine::FlushDecoding(), which waits for decode tasks
waiting on the MediaSourceResource.

--HG--
extra : rebase_source : 67e276044a251556eda2186d044c7f6b1f4363cd
extra : histedit_source : 4d921a5d2f4c0bce9ed67a3cb769c0d407662d6c