content/media/mediasource/TrackBuffer.cpp
@@ -70,10 +70,6 @@ private:
 void
 TrackBuffer::Shutdown()
 {
-  // End the SourceBufferResource associated with mCurrentDecoder, which will
-  // unblock any decoder initialization in ReadMetadata().
-  DiscardDecoder();
-
   // Finish any decoder initialization, which may add to mInitializedDecoders.
   // Shutdown waits for any pending events, which may require the monitor,
   // so we must not hold the monitor during this call.
